# gbemu

./: .ccls  .clang-format  .clang-tidy  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  install-deps.py  install-deps.sh  main.c
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/: emulator.h  types.h
core/src/: algorithm.h  channel.h  color.h  constants.h  cpu.cpp  cpu.h  emulator.cpp  error_handling.cpp  error_handling.h  gpu.cpp  gpu.h  input.cpp  input.h  instruction_table.cpp  lcd.cpp  lcd.h  libretro.cpp  mbc.cpp  mbc.h  memory.cpp  memory.h  noise_source.h  renderer.h  ring_buffer.h  rom_loader.cpp  rom_loader.h  sdl_renderer.cpp  sdl_renderer.h  sound.cpp  sound.h  square_source.h  static_vector.h  timers.cpp  utils.h  wave_source.cpp  wave_source.h
core/src/gba/: assembler.cpp  assembler.h  common_instructions.h  cpu.cpp  cpu.h  dma.cpp  dma.h  emulator.cpp  emulator.h  gpu.cpp  gpu.h  hardware.h  hle.cpp  hle.h  input.h  interrupts.cpp  interrupts.h  io_registers.cpp  io_registers.h  lcd.cpp  lcd.h  mmu.cpp  mmu.h  sound.cpp  sound.h  thumb_instructions.cpp  thumb_instructions.h  thumb_to_arm.cpp  thumb_to_arm.h  timer.cpp  timer.h
core/src/gba/benchmark/: mmu.cpp
core/src/registers/: cgb.h  div.h  dmg.h  interrupt_request.h  lcd_stat.h  lcdc.h  palette.h  sound.h  tac.h  tima.h
core/src/sound_mods/: envelope_mod.cpp  envelope_mod.h  length_mod.h  quiet_mod.h  volume_shift_mod.h
cpu_experiments/: CMakeLists.txt
cpu_experiments/src/: assembler.cpp  assembler.h  imgui_memory_editor.h  main.cpp
cpu_experiments/src/debugger/: disassembly_view.cpp  disassembly_view.h  hardware_thread.cpp  hardware_thread.h
desktop/: CMakeLists.txt
desktop/src/: main.cpp
include/: types.h
src/: channel.h  color.h  constants.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  gpu.cpp  gpu.h  input.cpp  input.h  instruction_table.cpp  instruction_table.h  lcd.cpp  lcd.h  main.cpp  mbc.cpp  mbc.h  memory.cpp  memory.h  noise_source.cpp  noise_source.h  pixel.h  renderer.h  sdl_renderer.cpp  sdl_renderer.h  sdl_utils.h  sound.cpp  sound.h  sound_length.h  sprite_attribute.h  square_channel.cpp  square_channel.h  square_source.cpp  square_source.h  system.cpp  system.h  task.h  timers.cpp  timers.h  (+6 more)
src/registers/: cgb.h  dmg.h  interrupt_enabled.h  lcd_stat.h  lcdc.h  lyc.h  palette.h  sound.h  tac.h  tma.h
src/sound_mods/: envelope_mod.cpp  envelope_mod.h  length_mod.h  quiet_mod.h  volume_shift_mod.cpp
switch/: CMakeLists.txt  Makefile
switch/src/: main.cpp
